--- a/Home Page Website/css/styles.css
+++ b/Home Page Website/css/styles.css
@@ -1,7 +1,7 @@
 .header {
     padding: 60px;
     text-align: center;
-    background: #1abc9c;
+    background: #faf3eb;
     color: white;
     font-size: 30px;
   }
