--- a/Project-1/css/styles.css
+++ b/Project-1/css/styles.css
@@ -1,6 +1,6 @@
   .parent {
         position: relative;
-        background: rgb(255, 239, 239);
+        background: rgb(255, 255, 255);
         margin: auto;
         height: 100%;
         width: 56.25%;
@@ -11,7 +11,10 @@
     }   
   
   .child {
-    background: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
+    border-color: rgb(172, 172, 172);
+    border-style: solid;
+    border-width: .25px;
     height: 71.428571%;
     width: 71.428571%;
     position: absolute;
@@ -23,6 +26,9 @@
 
   .child2 {
     background: rgb(255, 255, 255);
+    border-color: rgb(0, 0, 0);
+    border-style: solid;
+    border-width: .25px;
     height: 42.857143%;
     width: 42.857143%;
     position: absolute;
@@ -33,7 +39,7 @@
      }
 
   .child3 {
-    background: rgb(153, 1, 1);
+    background: rgb(0, 0, 0);
     position: absolute;
     margin-left: auto;
     margin-right: auto;
