--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,9 @@ ol {
     padding-top: 2rem;
     padding-left: 3rem;
 }  
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 200px;
+  }
