--- a/project-2/css/styles.css
+++ b/project-2/css/styles.css
@@ -35,7 +35,17 @@ position: absolute;
 .child3 {
 display: flex; 
 background: rgb(0, 0, 0);
-width: .5cm;
+width: 1.86335404%;
 height: 42.857143%;
-position: absolute;
+position: relative;
+justify-content: space-between;
 }
+
+.child4 {
+  display: flex; 
+  background: rgb(255, 255, 255);
+  width: 1.86335404%;
+  height: 42.857143%;
+  position: relative;
+  justify-content: space-between;
+  }
