--- a/line-3/css/styles.css
+++ b/line-3/css/styles.css
@@ -66,15 +66,28 @@ justify-content: space-between;
 
     .child6 {
     display: flex; 
-    background: rgb(0, 0, 0);
+    background: rgb(255, 8, 8);
     width: 42.857143%;
     height: 42.857143%;
     position: absolute;
-    justify-content: space-between;
-      --mask:
-      radial-gradient(17.3px at calc(100% + 5.50px) 50%,#0000 calc(99% - 10px),#000 calc(101% - 10px) 99%,#0000 101%) calc(50% - 10.5px + .5px) calc(50% - 22px)/ 21px 44px  ,
-      radial-gradient(17.3px at -5.5px 50%,#0000 calc(99% - 10px),#000 calc(101% - 10px) 99%,#0000 101%) calc(50% + 10.5px) 50%/21px 44px  ;
-    -webkit-mask: var(--mask);
-            mask: var(--mask);
     }
     
+  @media only screen and (max-width: 1000px) {
+      .child6 {
+        --mask:
+    radial-gradient(24.85px at calc(100% + 13.65px) 50%,#0000 calc(99% - 12px),#000 calc(101% - 12px) 99%,#0000 101%) calc(50% - 12.5px + .5px) calc(50% - 26px)/ 25px 52px  ,
+    radial-gradient(24.85px at -13.65px 50%,#0000 calc(99% - 12px),#000 calc(101% - 12px) 99%,#0000 101%) calc(50% + 12.5px) 50%/25px 52px  ;
+  -webkit-mask: var(--mask);
+          mask: var(--mask);
+      }
+    }
+
+    @media only screen and (max-width: 1900px) {
+      .child6 {
+        --mask:
+        radial-gradient(30.85px at calc(100% + 13.65px) 50%,#0000 calc(99% - 24px),#000 calc(101% - 24px) 99%,#0000 101%) calc(50% - 18.5px + .5px) calc(50% - 26px)/ 37px 52px  ,
+        radial-gradient(30.85px at -13.65px 50%,#0000 calc(99% - 24px),#000 calc(101% - 24px) 99%,#0000 101%) calc(50% + 18.5px) 50%/37px 52px  ;
+      -webkit-mask: var(--mask);
+              mask: var(--mask);
+      }
+    }
