--- a/line-2/css/styles.css
+++ b/line-2/css/styles.css
@@ -83,3 +83,44 @@ justify-content: space-between;
   -webkit-mask: var(--mask);
           mask: var(--mask);
     }
+
+
+    @media only screen and (min-width: 300px) and (max-width: 600px) {
+      .child5 {
+        --mask:
+        radial-gradient(27.52px at calc(100% + 18.90px) 50%,#0000 calc(99% - 8px),#000 calc(101% - 8px) 99%,#0000 101%) calc(50% - 11px + .5px) calc(50% - 28px)/ 22px 56px  repeat-y,
+        radial-gradient(27.52px at -18.9px 50%,#0000 calc(99% - 8px),#000 calc(101% - 8px) 99%,#0000 101%) calc(50% + 11px) 50%/22px 56px  repeat-y;
+      -webkit-mask: var(--mask);
+              mask: var(--mask);
+      }
+    }
+
+    @media only screen and (min-width: 600px) and (max-width: 900px) {
+      .child5 {
+        --mask:
+        radial-gradient(29.52px at calc(100% + 18.90px) 50%,#0000 calc(99% - 12px),#000 calc(101% - 12px) 99%,#0000 101%) calc(50% - 13px + .5px) calc(50% - 28px)/ 26px 56px  repeat-y,
+        radial-gradient(29.52px at -18.9px 50%,#0000 calc(99% - 12px),#000 calc(101% - 12px) 99%,#0000 101%) calc(50% + 13px) 50%/26px 56px  repeat-y;
+      -webkit-mask: var(--mask);
+              mask: var(--mask);
+      }
+    }
+
+    @media only screen and (min-width: 900px) and (max-width: 1100px) {
+      .child5 {
+        --mask:
+        radial-gradient(33.019999999999996px at calc(100% + 18.90px) 50%,#0000 calc(99% - 19px),#000 calc(101% - 19px) 99%,#0000 101%) calc(50% - 16.5px + .5px) calc(50% - 28px)/ 33px 56px  repeat-y,
+        radial-gradient(33.019999999999996px at -18.9px 50%,#0000 calc(99% - 19px),#000 calc(101% - 19px) 99%,#0000 101%) calc(50% + 16.5px) 50%/33px 56px  repeat-y;
+      -webkit-mask: var(--mask);
+              mask: var(--mask);
+      }
+      }
+
+      @media only screen and (min-width: 1100px) and (max-width: 1300px) {
+        .child5 {
+          --mask:
+          radial-gradient(36.019999999999996px at calc(100% + 18.90px) 50%,#0000 calc(99% - 25px),#000 calc(101% - 25px) 99%,#0000 101%) calc(50% - 19.5px + .5px) calc(50% - 28px)/ 39px 56px  repeat-y,
+          radial-gradient(36.019999999999996px at -18.9px 50%,#0000 calc(99% - 25px),#000 calc(101% - 25px) 99%,#0000 101%) calc(50% + 19.5px) 50%/39px 56px  repeat-y;
+        -webkit-mask: var(--mask);
+                mask: var(--mask);
+        }
+        }
